-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 080405) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

08042005 (v2.4.1)  -** stable release **-
	- note: verified to work with automake versions 1.6 and 1.9;
		automake 1.5 and older, as well as autoconf versions
	        older than 2.50, are no longer supported; these
		changes only affect users of Ecasound CVS checkouts
	- added: ecaplay - better error reporting, feature to reset
		 output device audio parameters for each new input 
		 file, support for ECAPLAY_OUTPUT_DEVICE environment
		 variable; see ecatools(1) for more info
	- added: playlist mode to ecaplay (new -q, and -p options;
		 see ecaplay(1) for more info)
	- added: "Supported automake/autoconf features" section to
	         the INSTALL file
	- added: new presets to the default effect_presets file
	- added: support for describing full range of preset parameter 
		 flags with -ppt (see effect_presets file and the
		 relevant sections in User's Guide)
	- added: new sections on preset parameters to User's Guide
	- added: allow reseting ecasignalview max-peak and clipped-samples 
		 counters by sending a SIGHUP to the process
	- changed: moved definitions from acconfig.h to configure.in;
		   gets rid of the AC_DEFINE warnings produced by
		   recent versions of autoheader
	- changed: Ecasound Programmer's Guide converted from LaTeX
		   to ascii/rst