@@ -45,6 +45,7 @@ class ECA_IAMODE_PARSER : protected ECA_IAMODE_PARSER_COMMANDS {
   static void register_commands_cop(void);
   static void register_commands_copp(void);
   static void register_commands_ctrl(void);
+  static void register_commands_ctrlp(void);
   static void register_commands_dump(void);
 
   private:
